force-app/main/default/objects/Plan_Scenario_Decision__c/Plan_Scenario_Decision__c.object-meta.xml
<CustomObject>
    <description>Records every accept/reject/pivot decision made through the Ohanafy Plan Scenario Engine. Replaces the prior /tmp/ohanafy-memory.json store.</description>
    <label>Plan Scenario Decision</label>
    <nameField>
        <displayFormat>DEC-{00000000}</displayFormat>
        <label>Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Scenario Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>