force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Applied_Event_Ids__c.field-meta.xml
<CustomField>
    <fullName>Applied_Event_Ids__c</fullName>
    <description>Comma-joined snapshot of the Plan_Event_Template__c.Event_Id__c values applied at decision time.</description>
    <label>Applied Event Ids</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>