force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Decision_Id__c.field-meta.xml
<CustomField>
    <fullName>Decision_Id__c</fullName>
    <description>UUID generated server-side at insert time. External-id key.</description>
    <externalId>true</externalId>
    <label>Decision Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>