force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <description>Decision verb captured at the moment of action.</description>
    <label>Decision Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>accept</fullName>
                <label>Accept</label>
            </value>
            <value>
                <fullName>reject</fullName>
                <label>Reject</label>
            </value>
            <value>
                <fullName>pivot</fullName>
                <label>Pivot</label>
            </value>
            <value>
                <fullName>scope-cut</fullName>
                <label>Scope Cut</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>