force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>Free-form rationale text for the decision (PII-scrubbed by the LWC before write).</description>
    <label>Rationale</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>