force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Recorded_At__c.field-meta.xml
<CustomField>
    <fullName>Recorded_At__c</fullName>
    <description>Timestamp captured server-side via Datetime.now() at insert.</description>
    <label>Recorded At</label>
    <type>DateTime</type>
</CustomField>