force-app/main/default/objects/Plan_Scenario_Decision__c/fields/Scenario_Id__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Id__c</fullName>
    <description>Identifier of the scenario the decision applies to (e.g. yellowhammer-stress).</description>
    <label>Scenario Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>