force-app/main/default/objects/Plan_Scenario_Decision__c/fields/User_Id_Hash__c.field-meta.xml
<CustomField>
    <fullName>User_Id_Hash__c</fullName>
    <description>SHA-256 hex of the acting user id. Never the raw id (per CLAUDE.md "Do not log PII").</description>
    <label>User Id Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>